deploy/relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay
spec:
  selector:
    app.kubernetes.io/name: relay
  ports:
    - name: http
      port: 80
      targetPort: http
