deploy/relay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts: [relay.lab.patoarchitekci.io]
      secretName: relay-tls
  rules:
    - host: relay.lab.patoarchitekci.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: relay
                port:
                  name: http
